--- a/latex/ch5.tex
+++ b/latex/ch5.tex
@@ -24,7 +24,7 @@ After the completion of this thesis, my opinions on the most promising future di
 		Designing a different neural network architecture. If the rasterized/interpolated matrix form is more promising than the zero-padded matrix form, this would simplify the network design compared to the current ragged form. However, even if we continue using the ragged form of the transform, there are still many network architectures that can be tried that may be better than the one used in this thesis.
 \end{tight_enumerate}
 
-A design constraint of X-UMX is that the spectrograms for the 4 targets to have the same shape so that they can be summed in the frequency-domain combination loss. This ruled out an early experiment with different sliCQT parameters per-target. The STFT-based Wiener-EM step is compatible with the multi-sliCQT idea, since the different sliCQTs are swapped into the STFT domain for the iterative refinement step. Similarly, the frequency-domain combination losses of X-UMX can potentially be computed with the STFT after getting the per-target magnitude sliCQT estimates. This way, the improved loss functions of X-UMX would still be compatible with 4 independent sliCQT networks per-target.
+A design constraint of X-UMX is that the spectrograms for the four targets to have the same shape so that they can be summed in the frequency-domain combination loss. This ruled out an early experiment with different sliCQT parameters per-target. The STFT-based Wiener-EM step is compatible with the multi-sliCQT idea, since the different sliCQTs are swapped into the STFT domain for the iterative refinement step. Similarly, the frequency-domain combination losses of X-UMX can potentially be computed with the STFT after getting the per-target magnitude sliCQT estimates. This way, the improved loss functions of X-UMX would still be compatible with four independent sliCQT networks per-target.
 
 \subsection{Summary and outlook}
 
