--- a/latex/ch1.tex
+++ b/latex/ch1.tex
@@ -12,7 +12,7 @@ Time-frequency analysis is performed by multiplying the signal being studied by 
 
 The STFT is subject to a fixed and bounded time-frequency resolution, such that one cannot be arbitrarily precise in both time and frequency, and must trade them off by changing the duration of the window (\cite{gabor1946, gabordiagrams}). Improving the fixed time-frequency resolution of the STFT-based spectrogram in the visualization and analysis of general audio is an important direction of research (\cite{bettertfres1, bettertfres2}).
 
-In the task of music source separation, or music demixing, a mixed song which is a linear mixture of several sources is split or \textit{de-mixed} back into its original sources (\cite{musicsepgood, musicmask}). Music demixing systems commonly split mixed songs into 4 sources: vocals, drums, bass, and other (guitar, piano, etc.), following the example of open mixing and demixing datasets (\cite{sisec2016, otherdataset2, musdb18, musdb18hq}).
+In the task of music source separation, or music demixing, a mixed song which is a linear mixture of several sources is split or \textit{de-mixed} back into its original sources (\cite{musicsepgood, musicmask}). Music demixing systems commonly split mixed songs into four sources: vocals, drums, bass, and other (guitar, piano, etc.), following the example of open mixing and demixing datasets (\cite{sisec2016, otherdataset2, musdb18, musdb18hq}).
 
 The STFT spectrogram is a popular tool used by various music demixing systems throughout the years (\cite{musicsepgood, musicmask, sisec2018, fitzgerald1, umx, plumbley1, plumbley2}). The tradeoff of time-frequency resolution is an important consideration in these systems (\cite{tftradeoff1, tftradeoff2}) Music demixing systems have been proposed that use multiple window sizes of STFT (\cite{fitzgerald2, driedger}) or that replace the STFT with different time-frequency transforms (\cite{fitzgerald2, cqtseparation, bettermusicsep}), to improve results through the manipulation of time-frequency resolution.
 
@@ -76,6 +76,6 @@ The second contribution of this thesis is the adaptation of the reference Open-U
 
 \subsection{Outline}
 
-This thesis is organized as follows. Chapter 2 covers the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier Transform, STFT, CQT, NSGT, and sliCQ Transforms. It also presents an overview of machine learning for audio and music signals, an introduction to a few recurring software and code concepts, and a survey on the task of music demixing. Chapter 3 describes the methodology for the two objectives of the thesis, which are the PyTorch adaptation of the NSGT/sliCQT library, and the replacement of the STFT with the sliCQ Transform inside Open-Unmix. Chapter 4 shows the experimental results, and chapter 5 discusses the results and concludes the thesis.
+This thesis is organized as follows. Chapter two covers the background of acoustic signals, frequency analysis, and the important transforms in this thesis including the Fourier Transform, STFT, CQT, NSGT, and sliCQ Transforms. It also presents an overview of machine learning for audio and music signals, an introduction to a few recurring software and code concepts, and a survey on the task of music demixing. Chapter three describes the methodology for the two objectives of the thesis, which are the PyTorch adaptation of the NSGT/sliCQT library, and the replacement of the STFT with the sliCQ Transform inside Open-Unmix. Chapter four shows the experimental results, and chapter five discusses the results and concludes the thesis.
 
 \end{document}
